--- a/ShapeLibrary/ShapeLibrary/ShapeLibrary.csproj
+++ b/ShapeLibrary/ShapeLibrary/ShapeLibrary.csproj
@@ -45,6 +45,14 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shapes\Circle.cs" />
+    <Compile Include="Shapes\CompoundShape.cs" />
+    <Compile Include="Shapes\IShape.cs" />
+    <Compile Include="Shapes\IShapeComposition.cs" />
+    <Compile Include="Shapes\IShapeMath.cs" />
+    <Compile Include="Shapes\Line.cs" />
+    <Compile Include="Shapes\Rectangle.cs" />
+    <Compile Include="Shapes\Shape.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
